<resources>
    <string name="app_name">AIDentist</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_button_get_started">Get Started</string>
    <string name="title_on_boarding_first_slide">Early Screening</string>
    <string name="title_on_boarding_second_slide">Daily Treatment</string>
    <string name="title_on_boarding_third_slide">Appointment</string>
    <string name="description_on_boarding_first_slide">Identify The Type of Oral Disease  by Taking a Photo, Ai Dentist  Will Screening and Analyse</string>
    <string name="description_on_boarding_second_slide">Daily Treatment Suggestion Before and After Dental-Checkup</string>
    <string name="description_on_boarding_third_slide">Get Dentist Appointment  anytime and anywhere you like</string>
    <string name="back_button">Tombol Kembali</string>
    <string name="edit_button">Edit Button</string>
    <string name="poin">Poin</string>
    <string name="doctor_name_dummy">Hand Oko</string>
    <string name="dummy_user_name">Joko Santoso</string>
    <string name="image_guide">Gambar Arahan</string>
    <string name="guide1">• Pastikan Anda mengunggah foto gigi yang diambil menggunakan kamera.</string>
    <string name="guide2">• Gambar yang akan digunakan adalah bagian depan gigi.</string>
    <string name="guide3">• Pastikan saat pengambilan gambar mengikuti guideline.</string>
    <string name="guide4">• Pastikan saat mengambil gambar memiliki pencahayan yang cukup.</string>
    <string name="guide_home1">• Mulai check kesehatan gigi sekarang juga.</string>
    <string name="guide_home2">• Cegah kerusakan gigi lebih awal dengan perawatan mandiri.</string>
    <string name="guide_home3">• Dapatkan perawatan mandiri sesuai dengan kesehatan gigi anda.</string>
    <string name="app_member">AiDentist Member</string>
    <string name="member1">• Andre Citro Febriliyan Lanyak (M2120J1528)  </string>
    <string name="member2">• Muhammad Rahaji Jhaerol (M2120F1522) </string>
    <string name="member3">• Filfimo Yulfiz Ahsanul Hulqi (A2120F1521) </string>
    <string name="member4">• A.Aksa Nur Irwan (A2272J2365) </string>
    <string name="member5">• A. Muh. Fitrah Asfar (C2272J2366) </string>
    <string name="member6">• M. Zulfikar Novaly Rahman (C2135J1624) </string>
    <string name="services">Services</string>
    <string name="self_care">Self\nCare</string>
    <string name="medicine_reminder">Medicine\nReminder</string>
    <string name="information">Information</string>
    <string name="information_image">Gambar Informasi</string>
    <string name="information_title">Judul</string>
    <string name="see_more">Selengkapnya</string>
    <string name="upload_teeth">Upload Teeth</string>
    <string name="daily_treatment">Daily Treatment</string>
    <string name="treatment_warn">Harap lakukan scan gigi terlebih dahulu untuk mendapatkan rekomendasi perawatan harian</string>
    <string name="camera">Kamera</string>
    <string name="switch_camera">Ganti Kamera</string>
    <string name="failed_taken">Gagal mengambil gambar</string>
    <string name="month_year">July 2022</string>
    <string name="days_progress">∞ Days</string>
    <string name="days_progress1">5 Days</string>
    <string name="estimated_time">Estimated Time</string>
    <string name="estimated_days">∞ Days</string>
    <string name="estimated_time1">Estimated Time</string>
    <string name="estimated_days1">5 Days</string>
    <string name="estimated_goals1">5 Goals</string>
    <string name="estimated_days2">5 Days</string>
    <string name="estimated_goals2">5 Goals</string>
    <string name="estimated_days3">5 Days</string>
    <string name="estimated_goals3">5 Goals</string>
    <string name="treatment">Treatment</string>
    <string name="estimated_goals">∞ Goals</string>
    <string name="estimated_warn">VISIT THE DENTIST IF IT STILL CONTINUE PAST THE ESTIMATED TIME</string>
    <string name="available_consultation">Available Consultation</string>
    <string name="today_treatment">Today Treatment</string>
    <string name="dentist_appointment">Dentist Appointment</string>
    <string name="doctor_image">Gambar Dokter</string>
    <string name="doctor_profile">Doctor Profile</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="verified">Verified</string>
    <string name="online">Online</string>
    <string name="rate">Rating</string>
    <string-array name="schedule">
        <item>07.00 am - 03.00 pm</item>
        <item>08.00 am - 04.00 pm</item>
        <item>09.00 am - 05.00 pm</item>
        <item>10.00 am - 06.00 pm</item>
        <item>11.00 am - 07.00 pm</item>
        <item>12.00 am - 08.00 pm</item>
        <item>08.00 am - 04.00 pm</item>
        <item>09.00 am - 05.00 pm</item>
        <item>10.00 am - 06.00 pm</item>
        <item>11.00 am - 07.00 pm</item>
    </string-array>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vitae euismod quam. Praesent non ultricies purus, tristique fringilla turpis. Curabitur rhoncus lacinia nibh nec eleifend. Vivamus sed placerat neque, non varius lectus. Mauris leo ligula, rhoncus eu ipsum vitae, scelerisque egestas tortor\n\n. Phasellus scelerisque sodales ante sollicitudin fringilla. In tempor massa nec nulla volutpat dignissim ac in sem. Etiam quis pharetra enim. Morbi tempus posuere arcu, ut mattis mi accumsan nec. Proin venenatis bibendum massa. Integer gravida, dolor vel fringilla lacinia.</string>
    <string name="lorem_less">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis laoreet diam massa, id ultrices metus.</string>
    <string name="online_consultation">Online\nConsultation</string>
    <string name="offline_consultation">Offline\nConsultation</string>
    <string name="offline_consultation_toolbar">Offline Consultation</string>
    <string name="tos_cosultation">Sebelum melakukan konsultasi, pastikan jenis konsultasi yang anda pilih berdasarkan kebutuhan anda.</string>
    <string name="welcome_image_login">Welcome Image Login</string>
    <string name="login">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="button_login">Masuk</string>
    <string name="dont_have_acc">Belum punya akun?</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_image_signup">Welcome Image SignUp</string>
    <string name="name_hint">Nama</string>
    <string name="button_signup">Daftar</string>
    <string name="have_acc">Sudah Punya Akun?</string>
    <string name="greetings_user">Hi Joko Santoso</string>
    <string name="user_location">Jalan Haengnidan</string>
    <string name="endodontist">Endodontist</string>
    <string name="location">Lokasi</string>
    <string name="clinic_name">Klinik Denta Medica</string>
    <string name="clinic_location">Rappocini, Kota Makassar</string>
    <string name="clinic">Rumah Sakit</string>
    <string name="date_and_time">Tanggal dan waktu</string>
    <string name="month">April 2022</string>
    <string name="choose_date">Pilih slot waktu</string>
    <string name="book">Book</string>
    <string name="phone">Telepon</string>
    <string name="phone_call">Panggilan Video</string>
    <string name="hint_chat">Say something...</string>
    <string name="open_camera">Buka Kamera</string>
    <string name="send_message">Kirim Pesan</string>
    <string name="message">Message</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="transaction_history">Transaction History</string>
    <string name="other">Other</string>
    <string name="log_out">Log Out</string>
    <string name="days">Sun</string>
    <string name="date">2</string>
    <string name="clock">08:00</string>
    <string name="discoloration">Discoloration</string>
    <string name="periodontal">Periodontal</string>
    <string name="early_screening">Early Screening</string>
    <string name="_35">35%</string>
    <string name="_66">66%</string>
    <string name="dental_statistik">Dental Statistik</string>
    <string name="likely_periodontal">*Likely Periodontal</string>
    <string name="icon_dental_statistik">Icon Dental Statistik</string>
    <string name="prediction">Prediction</string>
    <string name="apakah_berbahaya">Apakah Berbahaya?</string>
    <string name="similiar">Similiar</string>
    <string name="desc_disease_string">Cavities are permanently damaged areas in the hard surface of your teeth that develop into tiny openings or holes.</string>
    <string name="desc_berbahaya">Jika dibiarkan terus menerus, bercak putih akan berubah menjadi bercak kecoklatan yang menyebar dan membentuk lubang pada gigi. Jika tidak ditangani, karies ini dapat menyebabkan nyeri, gigi tanggal, infeksi berbahaya, dan bahkan kematian.</string>
    <string name="disease">Disease</string>
    <string name="check_oral_health">Check Oral Health!</string>
    <string name="input_error">Isi data terlebih dahulu</string>
    <string name="periodontal_desc">Periodontitis merupakan salah satu komplikasi dari radang gusi yang tidak terobati. Jika kondisi ini terjadi dalam jangka panjang, jaringan di sekitar gusi dan gigi akan rusak sehingga menyebabkan gigi tanggal.</string>
    <string name="Risk_Perio">Seiring waktu, bakteri di karang gigi tadi akan menghasilkan racun yang dapat menyebabkan peradangan dan iritasi gusi di sekitar gigi (gingiva). Jika tidak segera diobati, radang gusi tersebut dapat menyebabkan terbentuknya celah di gusi yang memisahkan jaringan gusi dengan gigi. Celah tersebut menyebabkan bakteri dapat menginfeksi lebih dalam lagi sehingga merusak jaringan dan tulang di dalam gusi.</string>
    <string name="discoloration_title">Discoloration</string>
    <string name="desc_discoloration">Diskolorasi ekstrinsik disebabkan karena adanya penodaan (staining) akibat warna bahan makanan dan minuman yang dikonsumsi. Sehingga menyebabkan terbentuknya noda yang menempel pada permukaan gigi maupun bahan tambal gigi.</string>
    <string name="risk_dicoloration">Diskolorasi pada gigi dapat diperbaiki dengan menggunakan bahan pemutih gigi atau yang disebut dengan bleaching. Bleaching adalah tindakan untuk meningkatkan warna gigi menjadi lebih putih dari sebelumnya. Jenisnya ada berbagai macam, antara lain menggunakan zat kimia hidrogen peroksida dan karbamid peroksida dengan berbagai konsentrasi.</string>
    <string name="scan_first">Scan gigi terlebih dahulu ya</string>
    <string name="healthy_title">Healthy</string>
    <string name="healthy_desc">Healthy Teeth, bagian atas dan bawah gigi tetap utuh, tidak ada lubang ataupun lekukan yang membuat kasar. Bebas plak, gigi yang putih dan tidak ada noda di sana-sini.</string>
    <string name="risk_heath">Gigi anda termasuk dalam gigi sehat, untuk meningkatkanya, lakukan beberapa perawatan gigi seperti, gosok gigi secara teratur, dan menjaga makanan yang dimakan agar gigi anda tetap sehat.</string>
    <string name="logo_periodental">Logo Periodental</string>
    <string name="logo_discoloration">Logo Discoloration</string>
    <string name="logo_healthy">Logo Healhty</string>
    <string name="retake">Retake</string>
    <string name="check">Check</string>
    <string name="close_camera">Close Camera</string>
    <string-array name="name">
        <item>Jung Jae-Sung</item>
        <item>Ji Sung</item>
        <item>Lee See-Young</item>
        <item>Lee Kyu-Hyung</item>
        <item>Hwang Hee</item>
        <item>Jung Min-A</item>
        <item>Kwon Hwa-Woon</item>
        <item>Oh Hyun-Joong</item>
        <item>Kim Hye-Eun</item>
        <item>Moon Hak-Jin</item>
    </string-array>
</resources>