<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cornflower"
    app:layoutDescription="@xml/activity_boarding_scene">

    <ImageView
        android:id="@+id/first_image_view"
        android:layout_width="5dp"
        android:layout_height="9dp"
        android:src="@drawable/karakter_boarding_1" />

    <TextView
        android:id="@+id/title_view_first"
        style="@style/OnBoardingTitle"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:text="@string/title_on_boarding_first_slide" />

    <TextView
        android:id="@+id/subtitle_view_first"
        style="@style/OnBoardingSubTitle"
        android:text="@string/description_on_boarding_first_slide" />

    <ImageView
        android:id="@+id/second_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/karakter_boarding_2" />

    <TextView
        android:id="@+id/title_view_second"
        style="@style/OnBoardingTitle"
        android:text="@string/title_on_boarding_second_slide" />

    <TextView
        android:id="@+id/subtitle_view_second"
        style="@style/OnBoardingSubTitle"
        android:text="@string/description_on_boarding_second_slide" />

    <ImageView
        android:id="@+id/third_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/karakter_boarding_3"/>

    <TextView
        android:id="@+id/title_view_third"
        style="@style/OnBoardingTitle"
        android:text="@string/title_on_boarding_third_slide" />

    <TextView
        android:id="@+id/subtitle_view_third"
        style="@style/OnBoardingSubTitle"
        android:text="@string/description_on_boarding_third_slide"
        app:layout_constraintBottom_toBottomOf="@+id/car_view" />

    <View
        android:id="@+id/indicator_view_first"
        android:layout_width="@dimen/spacing_medium"
        android:layout_height="@dimen/spacing_medium"
        android:background="@drawable/background_indicator_disabled" />

    <View
        android:id="@+id/indicator_view_second"
        android:layout_width="@dimen/spacing_medium"
        android:layout_height="@dimen/spacing_medium"
        android:background="@drawable/background_indicator_disabled" />

    <View
        android:id="@+id/indicator_view_third"
        android:layout_width="@dimen/spacing_medium"
        android:layout_height="@dimen/spacing_medium"
        android:background="@drawable/background_indicator_disabled" />

    <View
        android:id="@+id/indicator_view_active"
        android:layout_width="@dimen/spacing_medium"
        android:layout_height="@dimen/spacing_medium"
        android:background="@drawable/background_indicator_enabled" />

    <Button
        android:id="@+id/button_get_started"
        android:text="@string/title_button_get_started"
        style="@style/OnBoarding.Button" />
</androidx.constraintlayout.motion.widget.MotionLayout>