<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menu.consultation.OfflineConsultationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/black"
            android:contentDescription="@string/back_button">
        </ImageButton>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/offline_consultation_toolbar"
            android:textColor="@color/black">
        </TextView>


    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/offline_doctor"
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_avatar_profile_hd">

        </de.hdodenhof.circleimageview.CircleImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/doctor_name"
            android:textColor="@color/black">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/online"
            android:textColor="@color/black"
            app:drawableLeftCompat="@drawable/ic_baseline_circle_19_green"
            android:drawablePadding="5dp">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="80dp"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/endodontist"
            android:textColor="@color/black">
        </TextView>

        <RatingBar
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="3"
            android:layout_gravity="start"
            android:layout_marginStart="80dp"
            android:layout_marginTop="70dp"
            android:theme="@style/RatingBar">
        </RatingBar>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/lokasi_dokter"
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offline_doctor">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:layout_marginTop="10dp"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/nunito_semibold"
            android:textColor="@color/black"
            android:textSize="20sp">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clinic_name"
            android:layout_marginTop="40dp"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/nunito_regular"
            android:textColor="@color/black"
            android:textSize="14sp">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clinic_location"
            android:layout_marginTop="58dp"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/nunito_regular"
            android:textColor="@color/black"
            android:textSize="14sp">
        </TextView>

        <RatingBar
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="3"
            android:layout_gravity="start"
            android:layout_marginStart="18dp"
            android:layout_marginTop="82dp"
            android:theme="@style/RatingBar">
        </RatingBar>

        <androidx.cardview.widget.CardView
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:layout_gravity="end|center"
            app:cardCornerRadius="8dp"
            android:elevation="9dp"
            app:cardElevation="9dp"
            android:layout_marginEnd="24dp">
            <ImageView
                android:contentDescription="@string/clinic"
                android:layout_width="66dp"
                android:layout_height="66dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:src="@drawable/lokasi_klinik">
            </ImageView>

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/tanggalwaktu"
        android:layout_width="match_parent"
        android:layout_height="164dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lokasi_dokter">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_and_time"
            android:layout_marginTop="10dp"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/nunito_semibold"
            android:textColor="@color/black"
            android:textSize="18sp">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/nunito_semibold"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal">
        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="58dp"
            android:orientation="horizontal"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/month_year" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTime"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="14dp"
            android:orientation="horizontal"
            android:scrollbars="none" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/button_book"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tanggalwaktu">

        <TextView
            android:id="@+id/slot_waktu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_date"
            android:textColor="@color/cloudy_grey"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp">

        </TextView>

        <Button
            android:id="@+id/book_button"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_gravity="center|end"
            android:layout_marginEnd="23dp"
            android:text="@string/book"
            android:textAllCaps="false">
        </Button>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>