<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menu.consultation.OnlineConsultationActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/black"
            android:contentDescription="@string/back_button">
        </ImageButton>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/doctorProfile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:src="@drawable/ic_avatar_profile_hd">

        </de.hdodenhof.circleimageview.CircleImageView>

        <TextView
            android:id="@+id/doctorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/doctor_name"
            android:textColor="@color/black">
        </TextView>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_gravity="end"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_baseline_call_24"
            android:contentDescription="@string/phone">
        </ImageButton>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginEnd="18dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_baseline_videocam_24"
            android:contentDescription="@string/phone_call">
        </ImageButton>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <EditText
                android:id="@+id/messageEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_shadow"
                android:elevation="8dp"
                android:autofillHints="name"
                android:hint="@string/hint_chat"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="10dp" />

            <ImageView
                android:id="@+id/camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:enabled="false"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_baseline_camera_alt_24"
                android:contentDescription="@string/open_camera"/>
            <ImageView
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:enabled="false"
                android:src="@drawable/ic_baseline_send_24"
                android:contentDescription="@string/send_message"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messageRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/linearLayout"
            android:background="@android:color/white" />
    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>